@@ -1,5 +1,9 @@
 $Id$
 
+2009-09-14 David Heremans <david.heremans@gnu-linux.net>
+	* HexViewer now correctly writes new values to the originatin
+	  debugable.
+
 2009-09-13 David Heremans <david.heremans@gnu-linux.net>
 	* More mousesupport in HexViewer
 	* Differentiate between data- vs charbased input.
